[package]
name = "rust_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.8", features = ["blocking","cookies","json"] }
tokio = { version = "1.15.0", features = ["full"] }
string-builder = "0.2.0"
hmac = "0.12.0"
sha2 = "0.10.1"
hex-literal = "0.3.4"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
hex = "0.4.3"
ring = "0.16.20"
async-trait = "0.1.52"
mockito = "0.30.0"