[metadata]
license_files = LICENSE

[bdist_wheel]
universal=1

[pycodestyle]
ignore = E501, F401, W503, E701
max-line-length = 120
max-complexity = 10
select = C,E,F,W,B,B950

[pep8]
ignore = E501, F401, W503, E701
max-line-length = 120
max-complexity = 10
select = C,E,F,W,B,B950

[tool:isort]
force_grid_wrap=0
include_trailing_comma=True
line_length=120
multi_line_output=3
use_parentheses=True

[flake8]
ignore = E501, F401, W503, E701
max-line-length = 120
max-complexity = 10
select = C,E,F,W,B,B950
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
